tuesday field testing updates

--- a/templates/webble.html
+++ b/templates/webble.html
@@ -17,7 +17,7 @@
   <!-- Goal/reached reading status display instead of modal -->
   <div id="readingStatusBox" class="reading-status">
     <!-- Updated dynamically with JS -->
-    Traveling to goal...
+    Waiting for Goal Location
   </div>
 
   <div id="loading">Loading Kriging Traverse...</div>
