--- a/templates/webble.html
+++ b/templates/webble.html
@@ -68,8 +68,8 @@
   <button id="submitCommandBtn">Submit Command</button>
   <button id="getReadingBtn">Get Reading</button>
   <input id="VMCInput" placeholder="Enter VMC"/>
-  <p>Estimated zHat: <span id="zHatValue">—</span></p>
-  <ul id="pointsList"></ul>
+  <input id="latitudeInput" placeholder="Enter LAT"/>
+  <input id="longitudeInput" placeholder="Enter LONG"/>
   <div id="sensorData">
     <div class="value-box">VWC: <span id="value1"></span></div>
     <div class="value-box">Temp: <span id="value2"></span></div>
